Fix social media icons on mobile footer.

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -361,10 +361,13 @@ a {
 }
 
 #footer {
+  .inner {
+    max-width: 1800px;
+    margin: 0 auto;
+  }
   position: relative;
   background: $primary-color;
-  padding: 2%;
-  padding-bottom: 10%;
+  padding: 1%;
   color: white;
   & > * { line-height: 2.2; }
   .column {
@@ -550,7 +553,6 @@ a {
     position: relative;
     background: $primary-color;
     padding: 2%;
-    padding-bottom: 20%;
     color: white;
     font-size: 4em !important;
     & > * { line-height: 2.2; }
@@ -562,7 +564,8 @@ a {
       margin-left: 5%;
       opacity: .9;
       &.copyright {
-        margin-top: 30px;
+        margin-top: 60px;
+        margin-left: 3%;
       }
       &.social {
         margin: 0;
